src/objects/Effort_Information__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effort_on_Date__c</fullName>
        <label>Effort on Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>User_Stories__c</referenceTo>
        <relationshipLabel>Effort Informations</relationshipLabel>
        <relationshipName>Effort_Informations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Effort Information</label>
    <nameField>
        <label>Effort Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Effort Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>